--- a/docs/versioned_docs/version-1.16.0/api/components/keyboard-sticky-view/index.mdx
+++ b/docs/versioned_docs/version-1.16.0/api/components/keyboard-sticky-view/index.mdx
@@ -4,6 +4,8 @@ keywords:
     react-native-keyboard-controller,
     KeyboardStickyView,
     keyboard sticky view,
+    keyboard accessory view,
+    KeyboardAccessoryView,
     keyboard sticky footer,
     sticky view,
     sticky footer,
