--- a/docs/docs/guides/components-overview.mdx
+++ b/docs/docs/guides/components-overview.mdx
@@ -33,6 +33,7 @@ import KeyboardAwareScrollView from "@site/src/components/HomepageFeatures/text-
 import KeyboardStickyView from "../api/components/keyboard-sticky-view/ksv.lottie.json";
 import KeyboardToolbar from "../api/components/keyboard-toolbar/toolbar.lottie.json";
 import OverKeyboardView from "../api/over-keyboard-view/over-keyboard-view.lottie.json";
+import KeyboardBackgroundView from "../api/keyboard-background-view/keyboard-background-view.lottie.json";
 
 <div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
   <Lottie
@@ -119,6 +120,33 @@ A major benefit is its use of the library's native focus control logic (`Keyboar
 
 Its key difference from a standard `Modal` is precisely this ability to keep the keyboard open and active, enabling more seamless keyboard-centric interactions. Its usage is straightforward, primarily controlled via the `visible` boolean prop.
 
+## [`KeyboardBackgroundView`](../api/keyboard-background-view)
+
+<div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
+  <Lottie
+    className="lottie"
+    animationData={KeyboardBackgroundView}
+    style={{ width: 400, height: 400 }}
+    loop
+  />
+</div>
+
+`KeyboardBackgroundView` is a low-level utility component that replicates the **visual background of the system keyboard**. It doesn’t extend behind the keyboard or modify layout — instead, it lets you **match your UI’s design to the keyboard’s background**, making transitions feel more native and polished.
+
+This component is particularly useful when you want to:
+
+- **Blend your UI with the system keyboard’s look**, ensuring color and tone consistency across transitions.
+- Create **smooth visual experiences**, like a toolbar or floating panel that appears visually anchored to the keyboard.
+- Implement designs with **shared visual surfaces**, such as search interfaces or context panels, that remain visually connected during keyboard presentation.
+
+`KeyboardBackgroundView` is typically used alongside components like `KeyboardStickyView`, where keeping a consistent background color between your UI and the keyboard enhances the illusion of a single continuous surface.
+
+It’s not meant to manage layout, respond to keyboard events, or overlay content — its sole purpose is **visual alignment**.
+
+:::tip
+Use this when you want your UI to feel like it shares the same visual space as the system keyboard — particularly helpful for sticky toolbars, soft shadows, or themed transitions.
+:::
+
 ## Quick Reference Table
 
 | Component                 | Primary Action When Keyboard Appears       | Container Resizes/Adjusts? | Typical Use Case             | Key Distinction vs. Others                                |
@@ -128,6 +156,7 @@ Its key difference from a standard `Modal` is precisely this ability to keep the
 | `KeyboardAwareScrollView` | Scrolls content to focused input           | ✅ (scroll position)       | Large Scrollable Forms/Lists | Auto-scrolls within ScrollView, respects native animation |
 | `KeyboardToolbar`         | Adds Nav/Done buttons, sticks to keyboard  | ❌ (it's sticky)           | Multi-Input Forms            | Provides UI + native logic for input navigation/dismissal |
 | `OverKeyboardView`        | Displays content _over_ the keyboard       | ❌ (overlays content)      | Menus, Modals over keyboard  | Keeps keyboard open while showing overlay content         |
+| `KeyboardBackgroundView`  | Matches keyboard background color          | ❌ (visual only)           | Visual Blending/Transitions  | Synchronizes color with keyboard for seamless UI effects  |
 
 ## Which Component Should You Use?
 
@@ -138,5 +167,6 @@ Here's a simple guide to choosing:
 - For **scrollable screens containing multiple inputs** (like forms or long lists), `KeyboardAwareScrollView` will handle keeping the focused input visible automatically.
 - To add standard **"Previous/Next/Done" navigation buttons** to your forms, `KeyboardToolbar` offers a convenient and customizable solution.
 - When you need to display **contextual content like suggestions or menus over an active keyboard** without dismissing it, `OverKeyboardView` provides this unique capability.
+- If you're aiming for **visual consistency between your UI and the keyboard background** — for example, to blend a panel into the keyboard area — `KeyboardBackgroundView` helps match system colors for a polished, seamless effect.
 
 This library offers specialized tools for common keyboard challenges in React Native. Choose the one that best fits your UI need.
