fix: replace color

--- a/docs/docs/api/keyboard-background-view/index.mdx
+++ b/docs/docs/api/keyboard-background-view/index.mdx
@@ -130,7 +130,7 @@ const KeyboardSharedTransitionExample = () => {
         >
           <ReanimatedTextInput
             placeholder="127.0.0.1"
-            placeholderTextColor="#ecececec"
+            placeholderTextColor="#ececec"
             style={[
               {
                 width: "100%",
