fix: changes after self review

--- a/docs/docs/guides/components-overview.mdx
+++ b/docs/docs/guides/components-overview.mdx
@@ -8,6 +8,7 @@ keywords:
     views,
     extend keyboard,
     keyboard extender,
+    keyboard background view,
     over keyboard view,
     keyboard toolbar,
     keyboard avoiding view,
@@ -19,6 +20,7 @@ keywords:
     KeyboardToolbar,
     OverKeyboardView,
     KeyboardExtender,
+    KeyboardBackgroundView,
   ]
 ---
 
