docs: re-organize API section

--- a/docs/docs/api/views/keyboard-extender/index.mdx
+++ b/docs/docs/api/views/keyboard-extender/index.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 8
-description: Display views over keyboard without closing it.
+sidebar_position: 2
+description: Display views inside the keyboard
 keywords:
   [
     react-native-keyboard-controller,
