fix: build issues

--- a/docs/docs/api/hooks/keyboard/use-keyboard-handler/index.mdx
+++ b/docs/docs/api/hooks/keyboard/use-keyboard-handler/index.mdx
@@ -171,7 +171,7 @@ export const onInteractiveCode = (
 <div className="mobile">{onInteractiveCode}</div>
 
 :::info Event availability
-This event is available only on Android >= 11. To receive it you need to use [KeyboardGestureArea](./../../keyboard-gesture-area).
+This event is available only on Android >= 11. To receive it you need to use [KeyboardGestureArea](./../../views/keyboard-gesture-area).
 
 On iOS you need to specify `keyboardDismissMode="interactive"` on your `ScrollView`.
 :::
