--- a/docs/docs/api/views/keyboard-extender/index.mdx
+++ b/docs/docs/api/views/keyboard-extender/index.mdx
@@ -116,4 +116,4 @@ const styles = StyleSheet.create({
 
 ## Limitations
 
-- You can not put `TextInput` inside `KeyboardExtender`. Consider to use [KeyboardBackgroundView](../api/components/keyboard-sticky-view) + [KeyboardStickyView](../api/components/keyboard-sticky-view) instead.
+- You can not put `TextInput` inside `KeyboardExtender`. Consider to use [KeyboardBackgroundView](../views/keyboard-background-view) + [KeyboardStickyView](../../api/components/keyboard-sticky-view) instead.
