--- a/docs/docs/api/views/keyboard-background-view/index.mdx
+++ b/docs/docs/api/views/keyboard-background-view/index.mdx
@@ -152,5 +152,5 @@ export default KeyboardSharedTransitionExample;
 
 ## See also
 
-- [`KeyboardStickyView`](./components/keyboard-sticky-view) – affixes content to the keyboard’s frame.
-- [`useReanimatedKeyboardAnimation`](./hooks/keyboard/use-reanimated-keyboard-animation) – drive your own animations with native‑driven progress values.
+- [`KeyboardStickyView`](../components/keyboard-sticky-view) – affixes content to the keyboard’s frame.
+- [`useReanimatedKeyboardAnimation`](../hooks/keyboard/use-reanimated-keyboard-animation) – drive your own animations with native‑driven progress values.
