--- a/docs/docs/guides/interactive-keyboard.mdx
+++ b/docs/docs/guides/interactive-keyboard.mdx
@@ -39,7 +39,7 @@ First of all let's consider a simple example and layout for typical chat applica
 
 ### Adding `KeyboardGestureArea`
 
-To make interactive dismissing work on Android we need to add `KeyboardGestureArea` view. This view will track all gestures and will control the keyboard positioning. To customize the way how the keyboard will be dismissed you can specify `interpolator` [prop](../api/keyboard-gesture-area.md#interpolator-).
+To make interactive dismissing work on Android we need to add `KeyboardGestureArea` view. This view will track all gestures and will control the keyboard positioning. To customize the way how the keyboard will be dismissed you can specify `interpolator` [prop](../api/views/keyboard-gesture-area#interpolator-).
 
 In order to recognize all gestures on a `ScrollView` we need to wrap a `ScrollView` within `KeyboardGestureArea`:
 
