fix: changes after self-review

--- a/docs/docs/api/views/keyboard-gesture-area.mdx
+++ b/docs/docs/api/views/keyboard-gesture-area.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 4
 title: KeyboardGestureArea
-description: View for keyboard dismissal gestures
+description: View for gestures that will control keyboard position
 keywords:
   [
     react-native-keyboard-controller,
