docs: re-organize API section (#994)
## 📜 Description

Re-organized API section for easier navigation.

## 💡 Motivation and Context

We get more and more native views exposed from the library, so I thought
it's crucial to organize API section better. We already have `hooks` and
`components` categories and I thought to introduce a new category. I
didn't invent anything better than `views` - the idea is that in this
folder we'll have all native views (backed by native code).

## 📢 Changelog

<!-- High level overview of important changes -->
<!-- For example: fixed status bar manipulation; added new types
declarations; -->
<!-- If your changes don't affect one of platform/language below - then
remove this platform/language -->

### Docs

- added lottie animation for `KeyboardGestureArea` page;
- changed links for `KeyboardBackgroundView`;
- changed links to avoid broken links;
- changed description for `KeyboardExtender`.

## 🤔 How Has This Been Tested?

Tested via preview and CI.

## 📸 Screenshots (if appropriate):

|Before|After|
|-------|-----|
|<img width="299" alt="image"
src="https://github.com/user-attachments/assets/d2083e8e-18a2-4bfd-9525-1127d78d13df"
/>|<img width="300" alt="image"
src="https://github.com/user-attachments/assets/4bf341ff-6f7b-4992-b377-66ab2a8be47d"
/>|

## 📝 Checklist

- [x] CI successfully passed
- [x] I added new mocks and corresponding unit-tests if library API was
changed

--- a/docs/docs/api/views/keyboard-background-view/index.mdx
+++ b/docs/docs/api/views/keyboard-background-view/index.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 7
+sidebar_position: 3
 description: View that matches keyboard background
 keywords:
   [react-native-keyboard-controller, keyboard, background, keyboard extension]
@@ -152,5 +152,5 @@ export default KeyboardSharedTransitionExample;
 
 ## See also
 
-- [`KeyboardStickyView`](./components/keyboard-sticky-view) – affixes content to the keyboard’s frame.
-- [`useReanimatedKeyboardAnimation`](./hooks/keyboard/use-reanimated-keyboard-animation) – drive your own animations with native‑driven progress values.
+- [`KeyboardStickyView`](../components/keyboard-sticky-view) – affixes content to the keyboard’s frame.
+- [`useReanimatedKeyboardAnimation`](../hooks/keyboard/use-reanimated-keyboard-animation) – drive your own animations with native‑driven progress values.
