--- a/docs/docs/api/views/keyboard-gesture-area.mdx
+++ b/docs/docs/api/views/keyboard-gesture-area.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 4
 title: KeyboardGestureArea
+description: View for gestures that will control keyboard position
 keywords:
   [
     react-native-keyboard-controller,
@@ -9,6 +10,18 @@ keywords:
     view,
   ]
 ---
+
+import Lottie from "lottie-react";
+import lottie from "@site/src/components/HomepageFeatures/interactive.lottie.json";
+
+<div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
+  <Lottie
+    className="lottie"
+    animationData={lottie}
+    style={{ width: 400, height: 400 }}
+    loop
+  />
+</div>
 
 `KeyboardGestureArea` allows you to define a region on the screen, where gestures will control the keyboard position.
 
