--- a/docs/blog/2025-06-28-keyboard-management-evolution/index.mdx
+++ b/docs/blog/2025-06-28-keyboard-management-evolution/index.mdx
@@ -20,12 +20,12 @@ In my talk **Keyboard Management Evolution in React Native** at [AppJS conf](htt
 
 Hop aboard the ship and join me for the ride!
 
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/UTaJlqhTk2g"
-            title="Keyboard management evolution in react-native"
-            frameBorder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowFullScreen
-          />
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/W_Y0Y18aFV8"
+  title="Keyboard Management Evolution in React Native"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+/>
