docs: update documentation wording

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -83,7 +83,7 @@ import { ScrollView } from "react-native-gesture-handler";
 
 ### `bottomOffset`
 
-The distance between keyboard and focused `TextInput` when keyboard is shown. Default is `0`.
+The distance between the keyboard and the caret inside a focused `TextInput` when the keyboard is shown. Default is `0`.
 
 :::info `react-native-keyboard-aware-scroll-view` equivalent
 This property is equivalent to [extraHeight](https://github.com/APSL/react-native-keyboard-aware-scroll-view/tree/9eee405f7b3e261faf86a0fc8e495288d91c853e?tab=readme-ov-file#props) from original [react-native-keyboard-aware-scroll-view](https://github.com/APSL/react-native-keyboard-aware-scroll-view) package.
