docs: added slider to showcase more use-cases

--- a/docs/blog/2025-07-22-keyboard-extensions/index.mdx
+++ b/docs/blog/2025-07-22-keyboard-extensions/index.mdx
@@ -47,6 +47,14 @@ With `KeyboardExtender`, you’re not just avoiding the keyboard — you’re **
 
 For example, if you're building a **money transfer** or **payment** app, you can now display a predefined set of quick-select amounts (e.g., $5, $10, $20) **inside the keyboard space** — making the experience more fluid and faster for your users.
 
+import Swiper from "@site/src/components/Swiper";
+
+import Chrome from "./images/chrome.png";
+import RevolutMath from "./images/revolut-math.png";
+import RevolutPresets from "./images/revolut-presets.png";
+
+<Swiper images={[RevolutPresets, RevolutMath, Chrome]} />
+
 > Thanks to [Amur](https://github.com/Amurmurmur) for sparking the idea behind this component! 💡
 
 ## 🎨 New `KeyboardBackgroundView` component
