--- a/docs/versioned_docs/version-1.18.0/api/views/keyboard-extender/index.mdx
+++ b/docs/versioned_docs/version-1.18.0/api/views/keyboard-extender/index.mdx
@@ -57,59 +57,125 @@ A boolean prop indicating whether the component is enabled or disabled. If it's 
 ## Usage
 
 ```jsx
-import React, { useState } from "react";
-import { View, Text, TextInput, StyleSheet } from "react-native";
-import { KeyboardExtender } from "react-native-keyboard-controller";
+import React, { useEffect, useMemo, useState } from "react";
+import {
+  Alert,
+  Keyboard,
+  StyleSheet,
+  Text,
+  TextInput,
+  TouchableOpacity,
+  TouchableWithoutFeedback,
+} from "react-native";
+import {
+  KeyboardExtender,
+  useKeyboardState,
+} from "react-native-keyboard-controller";
+import Reanimated, {
+  useAnimatedStyle,
+  useSharedValue,
+  withTiming,
+} from "react-native-reanimated";
+import { SafeAreaView } from "react-native-safe-area-context";
 
-export default function KeyboardExtenderExample() {
-  const [keyboardVisible, setKeyboardVisible] = useState(false);
+export default function KeyboardExtendExample() {
+  const appearance = useKeyboardState((state) => state.appearance);
+  const [showExtend, setShowExtend] = useState(true);
+  const opacity = useSharedValue(1);
+
+  useEffect(() => {
+    opacity.set(withTiming(showExtend ? 1 : 0));
+  }, [showExtend]);
+
+  const animatedStyle = useAnimatedStyle(
+    () => ({
+      opacity: opacity.value,
+    }),
+    [],
+  );
+  const textStyle = useMemo(
+    () => [
+      styles.priceText,
+      appearance === "light"
+        ? styles.lightKeyboardText
+        : styles.darkKeyboardText,
+    ],
+    [appearance],
+  );
 
   return (
-    <View style={styles.container}>
-      <TextInput
-        style={styles.input}
-        placeholder="Type something..."
-        onFocus={() => setKeyboardVisible(true)}
-        onBlur={() => setKeyboardVisible(false)}
-      />
-
-      <KeyboardExtender enabled={keyboardVisible}>
-        <View style={styles.keyboardExtender}>
-          <Text style={styles.quickOption}>10$</Text>
-          <Text style={styles.quickOption}>20$</Text>
-          <Text style={styles.quickOption}>50$</Text>
-        </View>
+    <>
+      <TouchableWithoutFeedback onPress={() => Keyboard.dismiss()}>
+        <SafeAreaView edges={["top"]} style={styles.container}>
+          <TextInput
+            keyboardType="numeric"
+            placeholder="Donation amount"
+            placeholderTextColor="#5c5c5c"
+            style={styles.input}
+            onFocus={() => setShowExtend(true)}
+          />
+          <TextInput
+            keyboardType="numeric"
+            placeholder="Postal code"
+            placeholderTextColor="#5c5c5c"
+            style={styles.input}
+            onFocus={() => setShowExtend(false)}
+          />
+        </SafeAreaView>
+      </TouchableWithoutFeedback>
+      <KeyboardExtender enabled={showExtend}>
+        <Reanimated.View style={[styles.keyboardExtend, animatedStyle]}>
+          <TouchableOpacity onPress={() => Alert.alert("10 dollars")}>
+            <Text style={textStyle}>10$</Text>
+          </TouchableOpacity>
+          <TouchableOpacity onPress={() => Alert.alert("20 dollars")}>
+            <Text style={textStyle}>20$</Text>
+          </TouchableOpacity>
+          <TouchableOpacity onPress={() => Alert.alert("50 dollars")}>
+            <Text style={textStyle}>50$</Text>
+          </TouchableOpacity>
+        </Reanimated.View>
       </KeyboardExtender>
-    </View>
+    </>
   );
 }
 
 const styles = StyleSheet.create({
+  background: {
+    ...StyleSheet.absoluteFillObject,
+    flex: 1,
+    width: "100%",
+  },
   container: {
     flex: 1,
-    padding: 20,
+    paddingHorizontal: 20,
+    backgroundColor: "#ffffff",
   },
   input: {
     height: 40,
-    borderWidth: 1,
-    borderColor: "#ccc",
+    borderWidth: 2,
+    borderColor: "#1c1c1c",
+    borderRadius: 8,
     padding: 10,
+    fontSize: 18,
     marginBottom: 20,
-    borderRadius: 4,
   },
-  keyboardExtender: {
+  keyboardExtend: {
+    width: "100%",
     flexDirection: "row",
     justifyContent: "space-around",
     alignItems: "center",
-    backgroundColor: "#f5f5f5",
-    borderTopWidth: 1,
-    borderTopColor: "#ccc",
-    padding: 15,
   },
-  quickOption: {
-    fontSize: 16,
-    fontWeight: "bold",
-    padding: 10,
+  priceText: {
+    fontSize: 18,
+    fontWeight: "600",
+    padding: 20,
+  },
+  lightKeyboardText: {
+    color: "black",
+  },
+  darkKeyboardText: {
+    color: "white",
   },
 });
 ```
