--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -37,6 +37,56 @@ import toolbar from "./toolbar.lottie.json";
 - **Extended accessibility support** 🔍: Ensures that all users, including those with disabilities, can navigate through inputs effectively.
 - **Full control over the buttons behavior** 🔧: Customize the actions triggered by the next, previous, and done buttons according to your needs.
 - **Extends ViewProps** 📜: Supports all the props that `View` component has.
+- **Compound component pattern** 🔌: Mix and match sub-components for granular control over the toolbar's structure.
+
+## Compound Components
+
+The new API uses sub-components as children of `KeyboardToolbar`. These allow for precise customization, such as conditional rendering of buttons or injecting custom elements.
+
+### `<KeyboardToolbar.Background>`
+
+Renders a custom background (e.g., blur effect) that overlays the entire toolbar. Accepts any React node as children.
+
+```tsx
+import { Platform } from "react-native";
+import { KeyboardToolbar } from "react-native-keyboard-controller";
+import { BlurView } from "@react-native-community/blur";
+
+<KeyboardToolbar opacity="4F">
+  <KeyboardToolbar.Background>
+    <BlurView
+      blurAmount={32}
+      blurType={Platform.OS === "ios" ? "chromeMaterial" : "light"}
+      reducedTransparencyFallbackColor="white"
+      style={{ position: "absolute", top: 0, left: 0, bottom: 0, right: 0 }}
+    />
+  </KeyboardToolbar.Background>
+  {/* Other sub-components */}
+</KeyboardToolbar>;
+```
+
+:::warning
+Please, note, that you need to specify `opacity` prop for this prop to work. Because otherwise you will not see a blur effect.
+:::
+
+### `<KeyboardToolbar.Content>`
+
+Renders a custom content (e.g., yours UI elements) in the middle of the toolbar. Accepts any React node as children.
+
+```tsx
+import { KeyboardToolbar } from "react-native-keyboard-controller";
+
+<KeyboardToolbar>
+  <KeyboardToolbar.Content>
+    {showAutoFill ? (
+      <AutoFillContacts onContactSelected={onContactSelected} />
+    ) : null}
+  </KeyboardToolbar.Content>
+  {/* Other sub-components */}
+</KeyboardToolbar>;
+```
+
+### `<KeyboardToolbar.Prev>`
 
 ## Props
 
@@ -67,53 +117,6 @@ const CustomButton: KeyboardToolbarProps["button"] = ({
 // ...
 
 <KeyboardToolbar button={CustomButton} />;
-```
-
-### `blur`
-
-This property allows to render custom blur effect for the toolbar (by default iOS keyboard is opaque and it blurs the content underneath, so if you want to follow **HIG** ([_Human Interface Guidelines_](https://developer.apple.com/design/human-interface-guidelines/materials)) properly - consider to add this effect).
-
-By default it is `null` and will not render any blur effect, because it's not a responsibility of this library to provide a blur effect. Instead it provides a property where you can specify your own blur effect and its provider, i. e. `@react-native-community/blur`, `expo-blur` or maybe even `react-native-skia` (based on your project preferences of course).
-
-:::warning
-Please, note, that you need to specify `opacity` prop for this prop to work. Because otherwise you will not see a blur effect.
-:::
-
-```tsx
-import { BlurView } from "@react-native-community/blur";
-import {
-  KeyboardToolbar,
-  KeyboardToolbarProps,
-} from "react-native-keyboard-controller";
-
-const CustomBlur: KeyboardToolbarProps["blur"] = ({ children }) => (
-  <BlurView
-    blurType="chromeMaterial"
-    blurAmount={10}
-    reducedTransparencyFallbackColor="white"
-    style={{ position: "absolute", top: 0, left: 0, bottom: 0, right: 0 }}
-  >
-    {children}
-  </BlurView>
-);
-
-// ...
-
-<KeyboardToolbar blur={CustomBlur} opacity="4F" />;
-```
-
-### `content`
-
-This property allows you to show a custom content in the middle of the toolbar. It accepts JSX element. Default value is `null`.
-
-```tsx
-<KeyboardToolbar
-  content={
-    showAutoFill ? (
-      <AutoFillContacts onContactSelected={onContactSelected} />
-    ) : null
-  }
-/>
 ```
 
 ### `doneText`
@@ -345,7 +348,11 @@ export default function ToolbarExample() {
         <TextInput placeholder="House number" title="House" />
         <TextInput placeholder="Flat number" title="Flat" />
       </KeyboardAwareScrollView>
-      <KeyboardToolbar />
+      <KeyboardToolbar>
+        <KeyboardToolbar.Prev />
+        <KeyboardToolbar.Next />
+        <KeyboardToolbar.Done />
+      </KeyboardToolbar>
     </>
   );
 }
@@ -443,6 +450,73 @@ const textInputStyles = StyleSheet.create({
 :::info More comprehensive usage
 For more comprehensive usage that covers more complex interactions please check [example](https://github.com/kirillzyusko/react-native-keyboard-controller/tree/main/example) app.
 :::
+
+## Migration to compound component
+
+To migrate from the legacy prop-based API to the compound API:
+
+1. Add elements that you want to render in the toolbar (e.g., `Prev`, `Next`, `Done`, `Content`, `Background`).
+
+```tsx
+// Old:
+<KeyboardToolbar />
+
+// New:
+<KeyboardToolbar>
+  <KeyboardToolbar.Prev />
+  <KeyboardToolbar.Next />
+  <KeyboardToolbar.Done />
+</KeyboardToolbar>
+```
+
+2. Move props like `content`, `blur`, `doneText` into dedicated sub-components:
+
+```tsx
+// Old:
+<KeyboardToolbar content={<AutoFillContacts />} blur={<BlurView />} />
+
+// New:
+<KeyboardToolbar>
+  <KeyboardToolbar.Background>
+    <BlurView />
+  </KeyboardToolbar.Background>
+  <KeyboardToolbar.Content>
+    <AutoFillContacts />
+  </KeyboardToolbar.Content>
+  <KeyboardToolbar.Done text="Close" />
+</KeyboardToolbar>
+```
+
+3. If you used button callbacks, move them into dedicated sub-components:
+
+```tsx
+// Old:
+<KeyboardToolbar
+  onNextCallback={haptic}
+  onPrevCallback={haptic}
+  onDoneCallback={haptic}
+/>
+
+// New:
+<KeyboardToolbar>
+  <KeyboardToolbar.Next onPress={haptic} />
+  <KeyboardToolbar.Prev onPress={haptic} />
+  <KeyboardToolbar.Done onPress={haptic} />
+</KeyboardToolbar>
+```
+
+4. If you used `showArrows` prop, move it into conditional rendering:
+
+```tsx
+// Old:
+<KeyboardToolbar showArrows={false} />
+
+// New:
+<KeyboardToolbar>
+  {showArrows ? <KeyboardToolbar.Prev /> : null}
+  {showArrows ? <KeyboardToolbar.Next /> : null}
+</KeyboardToolbar>
+```
 
 ## Limitations
 
